--- a/css/styles.css
+++ b/css/styles.css
@@ -295,11 +295,13 @@ main > .col {
     margin: 2rem;
   }
 
-  /* header h1 */
+  /* header */
   header {
     border: none;
-    padding: 1.5rem 0;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
+  /* header  h1 */
   header h1 {
     font-size: 2rem;
   }
